--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,19 @@ body {
 
 }
 
+.icon {
+  display: inline;
+
+}
+
+#circle {
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  border-radius: 100%;
+  background-color: green;
+}
+
 #traffic-hourly {
   background-color: white;
   border-style: none;
@@ -25,12 +38,16 @@ body {
   border-style: none;
 }
 
+#main-header {
+  height: 100px;
+}
+
 
 header {
     text-align: center;
     margin-bottom: 5px;
     width: 100%;
-    height: 250px;
+    height: 225px;
     background-color: rgb(134, 163, 255);
 }
 
@@ -72,6 +89,7 @@ h3 {
 }
 
 #alertTitle {
+  display: inline-block;
   width: 30px;
 }
 
@@ -99,7 +117,7 @@ h5 {
 
 .section {
     border: 0.5px solid lightgray;
-
+    padding: 15px;
 }
 
 .side-menu {
@@ -134,11 +152,13 @@ h5 {
   text-align: center;
   margin-top: 10px;
   background-color: rgb(134, 163, 255);
-  height: 60px;
+  border-radius: 3px;
+  height: 35px;
   margin: 10px;
 }
 
 #exit {
+  display: inline-block;
   text-align: center;
   margin-top: 10px;
   padding: 19px 39px 18px 39px;
@@ -150,6 +170,7 @@ h5 {
   width: 10%;
   border: none;
   height: 20px;
+  margin-left: 100px;
   margin-bottom: 10px;
   cursor: pointer;
 }
@@ -309,12 +330,24 @@ label {
 
 }
 
-/*   Media Queries   
+#traffic-hourly, #traffic-daily, #traffic-weekly, 
+#traffic-monthly {
+  display: inline-block;
+  font-size: 10px;
+}
+
+  /*Media Queries  */ 
 
 @media (min-width: 768px) {
 
+#traffic-hourly, #traffic-daily, #traffic-weekly, 
+#traffic-monthly {
+  font-size: 16px;
 }
-*****************************************************************************************/
+
+
+}
+/*****************************************************************************************/
 
 @media (min-width: 1024px) {
 
@@ -322,17 +355,15 @@ label {
   #grid {
     display: grid;
     grid-template-columns: 0.17fr 1fr 1fr;
-    grid-gap: 5px;
 
   }
-  
 
-
-
-
+  #main-header {
+    height: 60px;
+  }
 
   header {
-    height: 100px;
+    height: 80px;
   }
 
   ul li {
@@ -346,6 +377,7 @@ label {
   }
 
   #alert {
+    height: 35px;
     text-align: left;
     grid-column-start: 2;
     grid-column-end: 4; 
@@ -355,6 +387,30 @@ label {
 ul #alerting.li {
   display: inline;
 }
+
+.memberss li {
+  display: inline-block;
+} 
+
+.date {
+  margin-left: 185px;
+}
+
+.dat {
+  margin-left: 125px;
+
+}
+
+
+.dae {
+  margin-left: 182px;
+
+}
+
+.d {
+  margin-left: 174px;
+}
+
 
   #exit {
     text-align: right; 
