--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+canvas { max-width: 100vw; }
 
 
 body {
@@ -427,7 +428,6 @@ ul #alerting.li {
   }
 
   #traffic {
-    width: 100%; 
     grid-column-start: 2;
     grid-column-end: 4; 
 }
